<resources>
    <string name="app_name">My Sample App</string>
    <string name="SermonHeader">설교 말씀</string>
    <string name="AnnouncementHeader">교회 소식</string>
    <string name="InformationHeader">교회 소개</string>
    <string name="WelcomeHeader">환 영 합 니 다 !</string>
    <string name="JoyfulHeader">죠이플 교회</string>
    <string name="JoyfulAddress"><b>교회주소:</b> 9875 Dublin Canyon Rd.\n \t\tCastro Valley CA 94552</string>
    <string name="JoyfulCall"><b>교회전화:</b> (510)582-1240</string>
    <string name="JoyfulEmail"><b>이메일:</b> joyfulpastorlee@gmail.com</string>
    <string name="Navigate">길찾기</string>
    <string name="Date">Date</string>
    <string name="Title">Title</string>
    <string name="Verse">Verse</string>
    <string name="InformationMoreInformation">
            1부        9:00 AM\n
            2부       11:00 AM\n
            3부        1:15 PM\n
            주일학교    11:00 AM\n
            YOUTH     11:00 AM\n
            E.M.      10:00 AM\n\n
            Joyful Church는 개신교로는 세계적으로 가장 큰 교단인 미국 남 침례 교단 (Southern Baptist)에 속해 있습니다.\n\n
            미 남침례 교단은 복음적인 개신교단으로 천로 역정의 저자 \'요한 번연\', 설교자 \'챨스 스펄전\', 현대 선교의 아버지 \'윌리암 케리\', 전도자 \'빌리 그레이엄\', 인권 운동가 \'마틴 루터 킹\', 존경받는 대통령 \'지미 카터\' 등을 배출한 교단입니다.\n\n
            죠이플 교회는 이상준 목사가 2011년 2월 첫주일에 가정에서 처음 개척 예배를 드리고, 2012년 4월 셋째주일에 창립 예배를 드려 오늘에 이르게 되었습니다.
    </string>
    <string name="correct_password">승인되었습니다.</string>
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
    <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>
    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="content_helper_error_title">No Content Viewer</string>
    <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
    <string name="fragment_demo_instruction_overview_header">Overview</string>
    <string name="fragment_demo_instruction_description_header">Sample App Features</string>
    <string name="feature_sign_in_title">User Sign-in</string>
    <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
    <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
    <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
    <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
    <string name="feature_sign_in_demo_button">Demo User Identity</string>
    <string name="feature_user_data_storage_title">User Data Storage</string>
    <string name="feature_user_data_storage_subtitle">Store files for your users in the cloud.\nStore and sync user data in key/value pairs.</string>
    <string name="feature_user_data_storage_overview">Store user files such as photos in the cloud. Save user data in key/value pairs and sync across devices that are signed-in with the same user.</string>
    <string name="feature_user_data_storage_description">The Sample App demonstrates User File Storage and User Profile Data. The User File Storage demonstration includes a remote file explorer, which allows you to upload and download files from your Amazon S3 bucket. You will have access to four folders, a public folder where files are accessible to all users, a private folder where files are only accessible by the current app user, a protected folder where files are read-only to all users but only the owner of the folder can add or delete files, and the uploads folder which is write-only for all users.\n\nThe User Profile Data demonstration stores an app color theme using Amazon Cognito Sync and synchronizes that data across all of the user\'s devices as key/value pairs.</string>
    <string name="feature_user_data_storage_powered_by">Powered by Amazon Cognito and Amazon S3</string>
    <string name="feature_user_data_storage_demo_button_user_file_storage">Demo User File Storage</string>
    <string name="feature_user_data_storage_demo_button_user_settings">Demo User Profile Data</string>
    <string name="feature_cloud_logic_apis_title">Cloud Logic</string>
    <string name="feature_cloud_logic_apis_subtitle">Run business logic in the cloud without managing servers. Integrate functionality with your app using APIs.</string>
    <string name="feature_cloud_logic_apis_overview">Run business logic in the cloud without managing servers. Integrate functionality with your app using APIs.</string>
    <string name="feature_cloud_logic_apis_description">The Sample App demonstrates the ability of a mobile app to invoke a REST API in Amazon API Gateway. Select the HTTP method, API endpoint, and resource path. Edit the body of the request. Invoke the API and see results.</string>
    <string name="feature_cloud_logic_apis_powered_by">Powered by Amazon API Gateway and AWS Lambda</string>
    <string name="feature_cloud_logic_apis_demo_button">Demo Cloud Logic APIs</string>
    <string name="feature_cloud_logic_api_chooser_heading">Pick an API you want to demo</string>
    <string name="feature_cloud_logic_apis_path_chooser_heading">Path</string>
    <string name="cloud_logic_apis_endpoint">API Endpoint</string>
    <string name="cloud_logic_apis_path">Path</string>
    <string name="cloud_logic_apis_method">Method</string>
    <string name="cloud_logic_apis_querystring">Query String Parameters</string>
    <string name="cloud_logic_apis_requestbody">Request Body</string>
    <string name="cloud_logic_apis_responsebody">Response</string>
    <string name="cloud_logic_apis_invoke">Invoke</string>
    <string name="cloud_logic_apis_invoker_status_label">Status :</string>
    <string name="cloud_logic_apis_invoker_latency_label">Latency :</string>
    <string name="cloud_logic_apis_reset">Reset</string>
    <string name="main_fragment_title_user_identity">User Identity</string>
    <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
    <string name="identity_demo_text_view_description">Displays the user identity.</string>
    <string name="unknown_user">Guest User</string>
    <string name="user_id">USER IDENTIFIER</string>
    <string name="identity_demo_textview_username_description">User\'s name</string>
    <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
    <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
    <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
    <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
    <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
    <string name="content_dialog_ok">OK</string>
    <string name="content_cache_summary_text">Cache Summary</string>
    <string name="content_cache_limit_text">Limit</string>
    <string name="content_cache_use_text">In Use</string>
    <string name="content_cache_available_text">Available</string>
    <string name="content_cache_pinned_text">Pinned</string>
    <string name="content_refresh_text">Refresh</string>
    <string name="content_download_recent_text">Download Recent</string>
    <string name="content_set_cache_size_text">Set Cache Size</string>
    <string name="content_clear_cache_text">Clear Cache</string>
    <string name="content_path_prefix_text">Path:\u0020</string>
    <string name="content_folder_text">This is a folder.</string>
    <string name="content_context_menu_open">Open</string>
    <string name="content_context_menu_open_remote">Open Remote URL</string>
    <string name="content_context_menu_download">Download</string>
    <string name="content_context_menu_download_latest">Download Latest Version</string>
    <string name="content_context_menu_pin">Pin</string>
    <string name="content_context_menu_download_pin">Download &amp; Pin</string>
    <string name="content_context_menu_unpin">Unpin</string>
    <string name="content_context_menu_delete_local">Delete Local Copy</string>
    <string name="content_progress_dialog_title_wait">Please wait &#8230;</string>
    <string name="content_progress_dialog_message_load_local_content">Loading local content</string>
    <string name="content_progress_dialog_message_load_content">Loading S3 objects list</string>
    <string name="content_list_failure_text">Failure Listing Content</string>
    <string name="content_transfer_failure_text">Transfer Failure</string>
    <string name="content_removal_error_text">Content Removal Error</string>
    <string name="content_permission_failure_title_text">Permission Failure</string>
    <string name="content_permission_failure_text">Denial of Read External Storage Permission has disabled the ability to upload user files.</string>
    <string name="main_fragment_title_user_files">User Files</string>
    <string name="main_fragment_subtitle_user_files">Store and access files for your users.</string>
    <string name="user_files_demo_button_public">PUBLIC</string>
    <string name="user_files_demo_button_private">PRIVATE</string>
    <string name="user_files_demo_button_protected">PROTECTED</string>
    <string name="user_files_demo_button_uploads">UPLOADS</string>
    <string name="user_files_demo_dialog_signin_message">Private user file storage is only available to users who are signed-in.\n\nWould you like to sign in?</string>
    <string name="user_files_browser_upload_text">Upload</string>
    <string name="user_files_browser_new_folder_text">New Folder</string>
    <string name="user_files_browser_context_menu_delete">Delete Remote File</string>
    <string name="user_files_browser_dialog_create_folder_title">New folder</string>
    <string name="user_files_browser_progress_dialog_message_create_folder">Creating folder \'%s\'</string>
    <string name="user_files_browser_progress_dialog_message_delete_item">Deleting \'%s\'</string>
    <string name="user_files_browser_progress_dialog_message_upload_file">Uploading file \'%s\'</string>
    <string name="user_files_browser_progress_dialog_message_download_item">Downloading item \'%s\'</string>
    <string name="user_files_browser_error_message_create_folder">Failed to create folder due to \'%s\'.</string>
    <string name="user_files_browser_error_message_delete_item">Failed to delete item due to \'%s\'.</string>
    <string name="user_files_browser_error_message_download_item">Failed to download item due to \'%s\'.</string>
    <string name="nosql_select_table_item_partition_key_text">Partition Key</string>
    <string name="nosql_select_table_item_sort_key_text">Sort Key</string>
    <string name="nosql_select_table_index_count_text">Indexes</string>
    <string name="sermon_title">title</string>
    <string name="sermon_series">series</string>
    <string name="sermon_verse">verse</string>
    <string name="sermon_url">url</string>
    <string name="announcement_title">title</string>
    <string name="announcement_category">category</string>
    <string name="announcement_content">content</string>
    <string name="save">save</string>
</resources>