<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.joyfulchurch.AddSermonActivity">

    <EditText
        android:id="@+id/add_announcement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/announcement_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_announcement_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_announcement_title"
        android:layout_marginBottom="10dp"
        android:hint="@string/announcement_category" />

    <EditText
        android:id="@+id/add_announcement_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_announcement_category"
        android:layout_marginBottom="10dp"
        android:hint="@string/announcement_content" />

    <CalendarView
        android:id="@+id/add_announcement_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_announcement_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/add_announcement_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="22dp"
        android:text="@string/save" />


</RelativeLayout>
