<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mysampleapp.InformationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:background="@drawable/background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/churchmap"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/JoyfulAddress"
        android:background="@null"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/editText4" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/JoyfulCall"
        android:background="@null"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintLeft_toLeftOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.391" />

    <TextView
        android:id="@+id/editText5"
        android:layout_width="234dp"
        android:layout_height="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/JoyfulEmail"
        android:background="@null"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.542" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="31dp"
        android:background="#5BAE18"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Navigate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
