<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/nosql_table_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/dark_content_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nosql_table_partition_label"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/nosql_table_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:text="@string/nosql_select_table_item_partition_key_text" />
    <TextView
        android:id="@+id/nosql_table_partition_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/nosql_table_name"
        android:layout_toRightOf="@id/nosql_table_partition_label"
        android:layout_toEndOf="@id/nosql_table_partition_label"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/nosql_table_sort_label"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/nosql_table_partition_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:text="@string/nosql_select_table_item_sort_key_text" />
    <TextView
        android:id="@+id/nosql_table_sort_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/nosql_table_partition_label"
        android:layout_toRightOf="@id/nosql_table_sort_label"
        android:layout_toEndOf="@id/nosql_table_sort_label"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/nosql_table_indexes_label"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/nosql_table_sort_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:text="@string/nosql_select_table_index_count_text" />
    <TextView
        android:id="@+id/nosql_table_index_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/nosql_table_sort_label"
        android:layout_toRightOf="@id/nosql_table_indexes_label"
        android:layout_toEndOf="@id/nosql_table_indexes_label"
        android:textSize="14sp" />
</RelativeLayout>
